--- a/_posts/2025-05-24-LLM.md
+++ b/_posts/2025-05-24-LLM.md
@@ -1,6 +1,6 @@
 ---
 permalink: /20250524LLM/
-title: "日記：ChatGPTは「o4-miniと雑談してプロンプトを作ってもらい、それをo3と4.5に同時に投げて吟味する。」という使い方で良い？"
+title: "日記：質問：ChatGPTは「o4-miniと雑談してプロンプトを作ってもらい、それをo3と4.5に同時に投げて吟味する。」という使い方で良い？"
 date: 2025-05-24T018:30:31+09:00
 categories:
   - Economy
@@ -8,8 +8,6 @@ tags:
   - 経済
   - LLM
 ---
-
-## 質問：ChatGPTは「o4-miniと雑談してプロンプトを作ってもらい、それをo3,4.5に同時に投げて吟味する。」という使い方で良い？
 
 "国"のバランスシートが気になった。そしたら、ChatGPTのモデルが気になった。
 
