--- a/_posts/2025/2025-05/2025-05-27-link.md
+++ b/_posts/2025/2025-05/2025-05-27-link.md
@@ -8,13 +8,27 @@ tags:
   - 量子もつれ
 ---
 
-- 役に立ったLink
-  - 時間結晶
-  	- [参考:【史上初の映像化に成功！常軌を逸した物質「時間結晶」とは何か（宇宙ヤバイchキャベチ） - エキスパート - Yahoo!ニュース】](https://news.yahoo.co.jp/expert/articles/95d38ed70ad97b9a74a05873633ef24363e047df)
-  - ソフトパワー
-    - [参考:【マット・アルト「日本のポップカルチャーについて：日本はキミらのことなんかク○ほども気にしない」（2025年5月17日） – 経済学101】](https://econ101.jp/matt-alt_japanese-popculture/)
-  - インフラ時の債券の動き
-    - [参考:【分散効果が消滅した時の世界】](https://www.alliancebernstein.co.jp/knowledge/13206.html)
+## 役に立ったLink
+
+### 物理・数学
+
+- 時間結晶
+  - [参考:【史上初の映像化に成功！常軌を逸した物質「時間結晶」とは何か（宇宙ヤバイchキャベチ） - エキスパート - Yahoo!ニュース】](https://news.yahoo.co.jp/expert/articles/95d38ed70ad97b9a74a05873633ef24363e047df)
+- フラクタル
+  - マンデルブロ集合の先端のズーム
+    - [参考:【The Hardest Trip - Mandelbrot Fractal Zoom - YouTube】](https://www.youtube.com/watch?v=LhOSM6uCWxk)
+
+### 政治・マクロ経済
+
+- ソフトパワー
+  - [参考:【マット・アルト「日本のポップカルチャーについて：日本はキミらのことなんかク○ほども気にしない」（2025年5月17日） – 経済学101】](https://econ101.jp/matt-alt_japanese-popculture/)
+
+### 金融・ミクロ経済
+
+- インフレ時の債券の動き
+  - [参考:【分散効果が消滅した時の世界】](https://www.alliancebernstein.co.jp/knowledge/13206.html)
+
+
 <!-- ;    <img src="../assets/images/humor/byai/TimeBatterty0529.png" 
 ;   alt="tenkamochi"
 ;   style="
