--- a/_posts/2025-05-13-40y.md
+++ b/_posts/2025-05-13-40y.md
@@ -47,7 +47,7 @@ tags:
 ホログラフィック原理ってこういうの関係あるんだろうか。いつか理解したい。  
 [参考:【ホログラフィック宇宙　時空の本質に迫った四半世紀 | 日経サイエンス】](https://www.nikkei-science.com/202311_070.html)
 
-[追記：上記の解説はこちら]({{ '/2025-05-14-dimension/' | relative_url }})
+追記：上記の解説はこちら >> [対話：分かちがたい宇宙を分けてマージ：中心の無と盆踊り]({{ '/2025-05-14-dimension/' | relative_url }})
 
 ### 1人生あたりの元本保証
 
