--- a/_posts/2025/2025-05/2025-05-27-link.md
+++ b/_posts/2025/2025-05/2025-05-27-link.md
@@ -22,6 +22,7 @@ tags:
 
 - ソフトパワー
   - [参考:【マット・アルト「日本のポップカルチャーについて：日本はキミらのことなんかク○ほども気にしない」（2025年5月17日） – 経済学101】](https://econ101.jp/matt-alt_japanese-popculture/)
+  - [参考:【海外における対日世論調査｜外務省】](https://www.mofa.go.jp/mofaj/gaiko/culture/pr/yoron.html?fbclid=IwY2xjawKk7A1leHRuA2FlbQIxMABicmlkETFxTmtSSUl4WlFNdGRqU3Q3AR4H8KppX8e9sj1VMpz66gzqg0HDQ3OAam9mU-8kbCbfsUM7S7qSqpCEmpfa1Q_aem_brw1O43sR0rkDvq796EC1Q)
 
 ### 金融・ミクロ経済
 
