Julia集合を逆再生

--- a/_posts/2025-05-24-LLM.md
+++ b/_posts/2025-05-24-LLM.md
@@ -15,8 +15,8 @@ tags:
 
 会計は、人件費が損益計算書上の消費か、貸借対照表上の資産か、どちらで”客観的に評価”すべきか、30年経ってもわからないタイプ。  
 
-AIは、4月、LLMを一度しか使ってないChatGPT課金勢。  
-昨夏までLLMと一年ノンストップで対話した。Claude3メインでGeminiも課金しつつ。意思決定以外を任せられそうな未来に小躍りして楽しんだ。  
+AIは、4月、LLMを一度しか使ってないChatGPT課金勢。一服。  
+昨夏まではLLMと一年ノンストップで対話した。Claude3メインでGeminiも課金しつつ。意思決定以外を任せられそうな未来に小躍りして楽しんだ。  
 
 ---
 
