--- a/_posts/2025/2025-05/2025-05-27-link.md
+++ b/_posts/2025/2025-05/2025-05-27-link.md
@@ -17,6 +17,7 @@ tags:
 - フラクタル
   - マンデルブロ集合の先端のズーム
     - [参考:【The Hardest Trip - Mandelbrot Fractal Zoom - YouTube】](https://www.youtube.com/watch?v=LhOSM6uCWxk)
+  - [参考:【How to Fold a Julia Fractal — Acko.net】](https://acko.net/blog/how-to-fold-a-julia-fractal/)
 
 ### 政治・マクロ経済
 
