--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -1,6 +1,6 @@
 ---
 permalink: /20250531julia/
-title: "１パイ：Julia集合を逆再生"
+title: "混沌→１パイ：陰陽なJulia集合を逆再生"
 date: 2025-05-31T01:30:31+09:00
 categories:
   - Log
@@ -11,11 +11,24 @@ tags:
   - ゼロイチ
 ---
 
-「粒がリズミカルに重なり合い、”イチ(π)”になる」のイメージ
 
-[![image]({{ '/assets/images/humor/juliaOnmyo.png' | relative_url }})]({{ '/assets/images/humor/juliaOnmyo.png' | relative_url }})
+創造は、  
+境界が曖昧な時、交わる時、重なり合い、ランダムに、リズミカルに、分かれ、融合、、  
+「粒がリズミカルに重なり合い、”イチ”になる」イメージ。
+- 関連：[【対話：まとめ：場と時代の違いを考えた】]({{ '/dialogueBaJidai/' | relative_url }})
 
-## 動画：Julia集合から円を作る過程を逆再生(逆写像反復法の可視化)
+Julia集合から円に集まる過程は比喩として良いのかもしれない。  
+なんならどこかがドンピシャかもしれない。  
+
+![Julia set](https://upload.wikimedia.org/wikipedia/commons/d/d5/JSr07885.gif)
+- 動画GIF：Julia集合（模様はcの値で変わる）
+
+---
+
+## Julia集合から円を作る過程を逆再生(逆写像反復法の可視化)
+
+- 動画はジュリア集合にあった点が単純操作を繰り返して円に集まっていく様子の逆再生。
+  - 動画最後の複雑な模様は、そのまま100回くらい繰り返した場合。
 
 <video 
   src="{{ '/assets/movie/julia.mp4' | relative_url }}"
@@ -27,34 +40,48 @@ tags:
 </video>
 
 - [参考:【How to Fold a Julia Fractal — Acko.net】](https://acko.net/blog/how-to-fold-a-julia-fractal/)
+  
+---
 
-### 円の作り方：単純作業を繰り返して作る
+私には、円の分割と反転コピー（平方根の適用）の箇所が☯️陰陽マークのように見える。
+[![image]({{ '/assets/images/humor/juliaOnmyo.png' | relative_url }})]({{ '/assets/images/humor/juliaOnmyo.png' | relative_url }})
 
-- 元気玉みたいにいろんなとこから集める。
-  - どこから？：ジュリア集合(タツノオトシゴのような形など)のとこから
-  - どんなふうに？：２乗と移動を繰り返して
+---
 
+### 円を塗りつぶしてる"点"たちはどこからやってきたのか？
+
+- 円の作り方：
+  - 単純作業を繰り返して点を集める。
+    - どこから？：
+      - ジュリア集合のとこから(奇怪で複雑な模様のやつ)
+        - それ以外は除外される
+    - どんなふうに？：２乗と移動を繰り返す。
 ```
 # 反復（n = 0, 1, 2, …）
 for n in 0, 1, 2, …:
     z[n+1] = (z[n])^2 + c
 ```
-
-### 塗りつぶしてる"点"たちはどこからやってきたのか？:作った過程を逆戻り
-
-作り方の逆。cの分だけ戻す。ルートする。繰り返す。
+- 点が最初にあった場所の探し方：
+  - 円を作った過程を逆戻り。
+    - cの分だけ引き戻し、ルートする（平方根を求める）、を繰り返す。
 
 ---
 
-### パイの比喩
+### パイと粉砂糖の比喩
 
-パイの上に粉砂糖をばらまき、回転（＝二乗）と傾き（＝平行移動）を繰り返します。
+円をパイにたとえると、  
+パイの上に粉砂糖をばらまき、回転（＝二乗）と傾き（＝平行移動）を繰り返す。
 
 - 二乗操作（z → z^2）：  
-  パイを高速で回転させると、粉砂糖の粒一つ一つは、パイの中心から見た向き（角度）が２倍になり、中心からの距離は二乗されるように飛び跳ねます。
+  パイを高速で回転させると、粉砂糖の粒一つ一つは、パイの中心から見た向き（角度）が２倍になり、中心からの距離は二乗されるように飛び跳ねる。
 - 定数 c（平行移動）：  
-  パイは常に一定方向にわずかに傾き続けるため、回転後の粉砂糖は毎回その傾き分だけまとめて平行移動します。
+  パイは常に一定方向にわずかに傾き続けるため、回転後の粉砂糖は毎回その傾き分だけまとめて平行移動。
 - 発散判定：  
-  回転と傾きの結果、パイの縁を越えて落ちた粉砂糖はこぼれて二度とパイの上には戻りません。
+  回転と傾きの結果、パイの縁を越えて落ちた粉砂糖はこぼれて二度とパイの上には戻らない。
 
-どの粒が最後まで残るかを見ます。残った粒のもとあった場所が Julia 集合に対応します。
+どの粒が最後まで残るかを見て、残った粒のもとあった場所が Julia 集合に対応。
+
+## 関連
+
+- Julia集合のズーム映像
+<iframe width="1117" height="628" src="https://www.youtube.com/embed/wjWa7iUuq1A?mute=1" title="Left of Centre - A Julia Set Fractal Zoom" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
