--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -25,7 +25,7 @@ Julia集合から円に集まる過程は比喩として良いのかもしれな
 
 ---
 
-## Julia集合から円を作る過程を逆再生(逆写像反復法の可視化)
+## Julia集合から円を作る過程を逆再生
 
 - 動画はジュリア集合にあった点が単純操作を繰り返して円に集まっていく様子の逆再生。
   - 動画最後の複雑な模様は、そのまま100回くらい繰り返した場合。
