--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -11,13 +11,12 @@ tags:
   - ゼロイチ
 ---
 
+最近、時代のエネルギーを「粒がリズミカルに重なり合い、”イチ”になる」イメージで考えた。
+- 関連：[【対話：まとめ：場と時代の違いを考えた】]({{ '/dialogueBaJidai/' | relative_url }})  
+  
 
-創造は、  
-境界が曖昧な時、交わる時、重なり合い、ランダムに、リズミカルに、分かれ、融合、、  
-「粒がリズミカルに重なり合い、”イチ”になる」イメージ。
-- 関連：[【対話：まとめ：場と時代の違いを考えた】]({{ '/dialogueBaJidai/' | relative_url }})
-
-Julia集合から円に集まる過程は比喩として良いのかもしれない。  
+曖昧な境界、交わり、重なり、ランダム、リズミカル、分割、融合、、  
+比喩として、Julia集合から円に集まる過程が良いのかもしれない。  
 なんならどこかがドンピシャかもしれない。  
 
 ![Julia set](https://upload.wikimedia.org/wikipedia/commons/d/d5/JSr07885.gif)
@@ -81,7 +80,10 @@ for n in 0, 1, 2, …:
 
 どの粒が最後まで残るかを見て、残った粒のもとあった場所が Julia 集合に対応。
 
-## 関連
 
-- Julia集合のズーム映像
+## 混沌・複雑から生まれるイチπ
+
+ゼロから生まれるようで、複雑で脈略のないところから、重なり合うように融合して生まれてるのかもしれない。
+
+- 動画：Julia集合のズーム映像
 <iframe width="1117" height="628" src="https://www.youtube.com/embed/wjWa7iUuq1A?mute=1" title="Left of Centre - A Julia Set Fractal Zoom" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
