--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -37,7 +37,9 @@ tags:
   muted  
   loop  
   playsinline  
-  width="640">
+  width="640"
+  controls
+  >
 </video>
 
 - [参考:【How to Fold a Julia Fractal — Acko.net】](https://acko.net/blog/how-to-fold-a-julia-fractal/)
