--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -48,7 +48,8 @@ tags:
 
 私には、円の分割と反転コピー（平方根の適用）の箇所が☯️陰陽マークのように見える。
 [![image]({{ '/assets/images/humor/juliaOnmyo.png' | relative_url }})]({{ '/assets/images/humor/juliaOnmyo.png' | relative_url }})
-[参考:【Fig. 6: Image reconstruction. | Nature Photonics】](https://www.nature.com/articles/s41566-023-01272-3/figures/6)
+[陰陽マーク:【Fig. 6: Image reconstruction. | Nature Photonics】](https://www.nature.com/articles/s41566-023-01272-3/figures/6)
+
 ---
 
 ### 円を塗りつぶしてる"点"たちはどこからやってきたのか？
