--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -1,6 +1,6 @@
 ---
 permalink: /20250531julia/
-title: "混沌→１パイ：陰陽なJulia集合を逆再生"
+title: "陰陽なJulia集合を逆にたどる"
 date: 2025-05-31T01:30:31+09:00
 categories:
   - Log
@@ -13,22 +13,31 @@ tags:
   - 時代
 ---
 
-最近、時代のエネルギーを「粒がリズミカルに重なり合い、”イチ”になる」イメージで考えた。
-- 関連：[【対話：まとめ：場と時代の違いを考えた】]({{ '/dialogueBaJidai/' | relative_url }})  
-  
+## 本記事の内容
 
-曖昧な境界、交わり、重なり、ランダム、リズミカル、分割、融合、、  
-比喩として、Julia集合から円に集まる過程が良いのかもしれない。  
-なんならどこかがドンピシャかもしれない。  
-
-![Julia set](https://upload.wikimedia.org/wikipedia/commons/d/d5/JSr07885.gif)
-- 動画GIF：Julia集合（模様はcの値で変わる）
+- 複雑な地点から始まるエネルギーの反復が生み出す、「認識可能な安定状態」こそが創造ではないか、と考えてみた。
+- そのバランスを生み出すプロセスを、逆写像によって複雑なフラクタルが円へ収束する動きに重ね合わせてみた。
 
 ---
 
-## Julia集合から円を作る過程を逆再生
+## 背景
+  
+最近、時代のエネルギーを「粒がリズミカルに重なり合い、統合する」ようなイメージで思考していた。
+  - ☯️陰陽マーク、曖昧な境界、交わり、重なり、ランダム、リズミカル、分割、融合...  
+    - 関連：[【対話：まとめ：場と時代の違いを考えた】]({{ '/dialogueBaJidai/' | relative_url }})  
 
-- 動画はジュリア集合にあった点が単純操作を繰り返して円に集まっていく様子の逆再生。
+言葉にしきれない〈複雑さと単純さ〉から生まれる創造プロセスを表現しようとして、ジュリア集合の発散判定がふと頭に浮かんだ。
+なんならどこかがドンピシャかもしれない。  
+
+>![Julia set](https://upload.wikimedia.org/wikipedia/commons/d/d5/JSr07885.gif)  
+> 動画GIF：Julia集合（模様はcの値で変わる）  
+> [参考:【ジュリア集合 - Wikipedia】](https://ja.wikipedia.org/wiki/%E3%82%B8%E3%83%A5%E3%83%AA%E3%82%A2%E9%9B%86%E5%90%88)
+
+---
+
+## 円を塗りつぶしてる"点"たちはどこからやってきたのか？
+
+- 映像はジュリア集合にあった点が単純操作を繰り返して「円に集まっていく様子」の"逆再生"。
   - 動画最後の複雑な模様は、そのまま100回くらい繰り返した場合。
 
 <video 
@@ -46,28 +55,30 @@ tags:
   
 ---
 
-私には、円の分割と反転コピー（平方根の適用）の箇所が☯️陰陽マークのように見える。
-[![image]({{ '/assets/images/humor/juliaOnmyo.png' | relative_url }})]({{ '/assets/images/humor/juliaOnmyo.png' | relative_url }})
-[陰陽マーク:【Fig. 6: Image reconstruction. | Nature Photonics】](https://www.nature.com/articles/s41566-023-01272-3/figures/6)
+参考サイトでは下記のような説明。
 
----
-
-### 円を塗りつぶしてる"点"たちはどこからやってきたのか？
-
-- 円の作り方：
-  - 単純作業を繰り返して点を集める。
-    - どこから？：
-      - ジュリア集合のとこから(奇怪で複雑な模様のやつ)
-        - それ以外は除外される
-    - どんなふうに？：２乗と移動を繰り返す。
+- 円は漸化式の結果の総合であり、ジュリア集合はその起源
+  - 動画の円上の点は、ジュリア集合の点を順方向に何度も反復した結果
+    - それ以外の点は発散するので除外される
+    - 反復計算：自乗と並行移動を繰り返す。
 ```
 # 反復（n = 0, 1, 2, …）
 for n in 0, 1, 2, …:
     z[n+1] = (z[n])^2 + c
 ```
-- 点が最初にあった場所の探し方：
-  - 円を作った過程を逆戻り。
+
+- 逆に言えば、「円に並んでいる各点」を逆写像すれば、もともとどのジュリア集合上の点から来たかがわかる。
+  - 逆写像：円を作った過程を逆戻り
     - cの分だけ引き戻し、ルートする（平方根を求める）、を繰り返す。
+
+---
+
+### 場・時代・空間=複雑な地点,エネルギー=単純な反復
+
+私には、円の分割(平方根による角度が半分になる)と反転コピー（マイナスの平方根）の箇所が☯️陰陽マークのように見える。
+[![image]({{ '/assets/images/humor/juliaOnmyo.png' | relative_url }})]({{ '/assets/images/humor/juliaOnmyo.png' | relative_url }})
+
+複雑な地点から始まるエネルギーの反復が生む「安定状態☯️」の過程ってこんな感じなんだろうか？のイメージ。  
 
 ---
 
@@ -83,12 +94,9 @@ for n in 0, 1, 2, …:
 - 発散判定：  
   回転と傾きの結果、パイの縁を越えて落ちた粉砂糖はこぼれて二度とパイの上には戻らない。
 
-どの粒が最後まで残るかを見て、残った粒のもとあった場所が Julia 集合に対応。
+どの粒が最後まで残るかを見て、残った粒のもとあった場所が 充填Julia 集合に対応。
 
+### 関連
 
-## 混沌・複雑から生まれるイチπ
-
-ゼロから生まれるようで、複雑で脈略のないところから、重なり合うように融合して生まれてるのかもしれない。
-
-- 動画：Julia集合のズーム映像
+- Julia集合のズーム映像
 <iframe width="1117" height="628" src="https://www.youtube.com/embed/wjWa7iUuq1A?mute=1" title="Left of Centre - A Julia Set Fractal Zoom" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
