--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -15,8 +15,8 @@ tags:
 
 ## 本記事の内容
 
-- 複雑な地点から始まるエネルギーの反復が生み出す、「認識可能な安定状態」こそが創造ではないか、と考えてみた。
-- そのバランスを生み出すプロセスを、逆写像によって複雑なフラクタルが円へ収束する動きに重ね合わせてみた。
+- ジュリア集合の発散判定の解説が☯️マークに見えた。
+- 複雑な地点から始まるエネルギーの反復が生み出す、「認識可能な安定状態」という視点がありそう。
 
 ---
 
@@ -26,7 +26,7 @@ tags:
   - ☯️陰陽マーク、曖昧な境界、交わり、重なり、ランダム、リズミカル、分割、融合...  
     - 関連：[【対話：まとめ：場と時代の違いを考えた】]({{ '/dialogueBaJidai/' | relative_url }})  
 
-言葉にしきれない〈複雑さと単純さ〉から生まれる創造プロセスを表現しようとして、ジュリア集合の発散判定がふと頭に浮かんだ。
+ジュリア集合の発散判定がふと頭に浮かんだ。
 なんならどこかがドンピシャかもしれない。  
 
 >![Julia set](https://upload.wikimedia.org/wikipedia/commons/d/d5/JSr07885.gif)  
