--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -35,7 +35,9 @@ tags:
 
 ---
 
-## 円を塗りつぶしてる"点"たちはどこからやってきたのか？
+## 参考サイト：円を塗りつぶしてる"点"たちはどこからやってきたのか？
+
+以下、私の理解。
 
 - 映像はジュリア集合にあった点が単純操作を繰り返して「円に集まっていく様子」の"逆再生"。
   - 動画最後の複雑な模様は、そのまま100回くらい繰り返した場合。
@@ -73,7 +75,7 @@ for n in 0, 1, 2, …:
 
 ---
 
-### 場・時代・空間=複雑な地点,エネルギー=単純な反復
+### 感想：場・時代・空間=複雑な地点,エネルギー=単純な反復
 
 私には、円の分割(平方根による角度が半分になる)と反転コピー（マイナスの平方根）の箇所が☯️陰陽マークのように見える。
 [![image]({{ '/assets/images/humor/juliaOnmyo.png' | relative_url }})]({{ '/assets/images/humor/juliaOnmyo.png' | relative_url }})
@@ -97,6 +99,8 @@ for n in 0, 1, 2, …:
 どの粒が最後まで残るかを見て、残った粒のもとあった場所が 充填Julia 集合に対応。
 
 ### 関連
+
+- [参考:【陰陽マーク？　「量子もつれ」をリアルタイムに可視化することに成功　国際チームが23年に発表：ちょっと昔のInnovative Tech - ITmedia NEWS】](https://www.itmedia.co.jp/news/articles/2409/09/news051.html)
 
 - Julia集合のズーム映像
 <iframe width="1117" height="628" src="https://www.youtube.com/embed/wjWa7iUuq1A?mute=1" title="Left of Centre - A Julia Set Fractal Zoom" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
