--- a/_posts/2025/2025-05/2025-05-27-link.md
+++ b/_posts/2025/2025-05/2025-05-27-link.md
@@ -12,7 +12,8 @@ tags:
 
 ### 物理・数学
 
-- 時間結晶
+- 量子
+  - [参考:【陰陽マーク？　「量子もつれ」をリアルタイムに可視化することに成功　国際チームが23年に発表：ちょっと昔のInnovative Tech - ITmedia NEWS】](https://www.itmedia.co.jp/news/articles/2409/09/news051.html)
   - [参考:【史上初の映像化に成功！常軌を逸した物質「時間結晶」とは何か（宇宙ヤバイchキャベチ） - エキスパート - Yahoo!ニュース】](https://news.yahoo.co.jp/expert/articles/95d38ed70ad97b9a74a05873633ef24363e047df)
 - フラクタル
   - マンデルブロ集合の先端のズーム
