--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -6,28 +6,27 @@ categories:
   - Log
   - 数学
 tags:
-  - 量子
+  - 複素平面
   - 陰陽
-  - ゼロイチ
   - フラクタル
   - 時代
+  - 分けて分け合う
 ---
 
 ## 本記事の内容
 
-- ジュリア集合の発散判定の解説が☯️マークに見えた。
-- 複雑な地点から始まるエネルギーの反復が生み出す、「認識可能な安定状態」という視点がありそう。
+- ジュリア集合が☯️マークに見えた。
+- 「分けて分け合う」のたとえに使いたい。
 
 ---
 
 ## 背景
   
 最近、時代のエネルギーを「粒がリズミカルに重なり合い、統合する」ようなイメージで思考していた。
-  - ☯️陰陽マーク、曖昧な境界、交わり、重なり、ランダム、リズミカル、分割、融合...  
-    - 関連：[【対話：まとめ：場と時代の違いを考えた】]({{ '/dialogueBaJidai/' | relative_url }})  
+- ☯️陰陽マーク、曖昧な境界、交わり、重なり、ランダム、リズミカル、分割、融合...  
+  - 関連：[【対話：まとめ：場と時代の違いを考えた】]({{ '/dialogueBaJidai/' | relative_url }})  
 
 ジュリア集合の発散判定がふと頭に浮かんだ。
-なんならどこかがドンピシャかもしれない。  
 
 >![Julia set](https://upload.wikimedia.org/wikipedia/commons/d/d5/JSr07885.gif)  
 > 動画GIF：Julia集合（模様はcの値で変わる）  
@@ -37,10 +36,12 @@ tags:
 
 ## 参考サイト：円を塗りつぶしてる"点"たちはどこからやってきたのか？
 
+- [参考:【How to Fold a Julia Fractal — Acko.net】](https://acko.net/blog/how-to-fold-a-julia-fractal/)
+
 以下、私の理解。
 
-- 映像はジュリア集合にあった点が単純操作を繰り返して「円に集まっていく様子」の"逆再生"。
-  - 動画最後の複雑な模様は、そのまま100回くらい繰り返した場合。
+- ↓の映像はジュリア集合にあった点が単純操作を繰り返して「円に集まっていく様子」の"逆再生"。
+  - 動画の最後の複雑な模様は、そのまま100回くらい繰り返した場合。
 
 <video 
   src="{{ '/assets/movie/julia.mp4' | relative_url }}"
@@ -53,7 +54,6 @@ tags:
   >
 </video>
 
-- [参考:【How to Fold a Julia Fractal — Acko.net】](https://acko.net/blog/how-to-fold-a-julia-fractal/)
   
 ---
 
@@ -71,20 +71,22 @@ for n in 0, 1, 2, …:
 
 - 逆に言えば、「円に並んでいる各点」を逆写像すれば、もともとどのジュリア集合上の点から来たかがわかる。
   - 逆写像：円を作った過程を逆戻り
-    - cの分だけ引き戻し、ルートする（平方根を求める）、を繰り返す。
+    - 定数cの分だけ引き戻し、ルートする（平方根を求める）、を繰り返す。
 
 ---
 
-### 感想：場・時代・空間=複雑な地点,エネルギー=単純な反復
+### 感想：
 
-私には、円の分割(平方根による角度が半分になる)と反転コピー（マイナスの平方根）の箇所が☯️陰陽マークのように見える。
+☯️陰陽マークのように見える。  
+円の分割(平方根による角度が半分になる)と反転コピー（マイナスの平方根）の箇所が。
 [![image]({{ '/assets/images/humor/juliaOnmyo.png' | relative_url }})]({{ '/assets/images/humor/juliaOnmyo.png' | relative_url }})
 
-複雑な地点から始まるエネルギーの反復が生む「安定状態☯️」の過程ってこんな感じなんだろうか？のイメージ。  
+発散しそうでしない境界で複雑な模様になる。
+「境界が曖昧な地点」＝「創造が生まれる土壌」という直感にまた一つ。
 
 ---
 
-### パイと粉砂糖の比喩
+### 漸化式：パイと粉砂糖の比喩
 
 円をパイにたとえると、  
 パイの上に粉砂糖をばらまき、回転（＝二乗）と傾き（＝平行移動）を繰り返す。
@@ -97,6 +99,7 @@ for n in 0, 1, 2, …:
   回転と傾きの結果、パイの縁を越えて落ちた粉砂糖はこぼれて二度とパイの上には戻らない。
 
 どの粒が最後まで残るかを見て、残った粒のもとあった場所が 充填Julia 集合に対応。
+つまり、パイに残った粉砂糖は、ジュリア集合の位置にあった。
 
 ### 関連
 
@@ -104,3 +107,6 @@ for n in 0, 1, 2, …:
 
 - Julia集合のズーム映像
 <iframe width="1117" height="628" src="https://www.youtube.com/embed/wjWa7iUuq1A?mute=1" title="Left of Centre - A Julia Set Fractal Zoom" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
+
+- 3D:Julia Sets of the Mandelbulb (8k)
+<iframe width="1117" height="628" src="https://www.youtube.com/embed/cy1hu08VsNA?mute=1" title="Julia Sets of the Mandelbulb (8k)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
