--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -40,7 +40,7 @@ tags:
 
 以下、私の理解。
 
-- ↓の映像はジュリア集合にあった点が単純操作を繰り返して「円に集まっていく様子」の"逆再生"。
+- ↓の映像はジュリア集合にあった点が、発散せずに「円の中に収まっている」様子の"逆再生"。
   - 動画の最後の複雑な模様は、そのまま100回くらい繰り返した場合。
 
 <video 
