--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -84,6 +84,8 @@ for n in 0, 1, 2, …:
 発散しそうでしない境界で複雑な模様になる。  
 「境界が曖昧な地点」＝「創造が生まれる土壌」という直感にまた一つ。
 
+発散の判定には、ノルム（長さの絶対値）だけあれば良くて、でも、計算には角度（回転方向）が必要で、なので円として扱えてしまう。なので、描画平面と発散判定を同じ平面でできてしまう逆写像の理解に苦しんだ。
+
 ---
 
 ### 漸化式：パイと粉砂糖の比喩
