--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -87,9 +87,19 @@ for n in 0, 1, 2, …:
 発散の判定には、ノルム（長さの絶対値）だけあれば良くて、でも、計算には角度（回転方向）が必要で、なので円として扱えてしまう。なので、描画平面と発散判定を同じ平面でできてしまう逆写像の理解に苦しんだ。
 
 理解が曖昧なので、JavaScriptで、円周からJulia集合への逆写像を動かしてみた
+
+<video 
+  src="{{ '/assets/movie/onmyoJulia.mp4' | relative_url }}"
+  autoplay  
+  muted  
+  loop  
+  playsinline  
+  width="640"
+  controls
+  >
+</video>
+
   - [【Julia逆写像描画js】]({{ '/myPj/inverse/' | relative_url }})  
-
-
 
 ---
 
