--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -89,7 +89,7 @@ for n in 0, 1, 2, …:
 理解が曖昧なので、JavaScriptで、円周からJulia集合への逆写像を動かしてみた
 
 <video 
-  src="{{ '/assets/movie/onmyoJulia.mp4' | relative_url }}"
+  src="{{ '/assets/movie/2D-Julia-set.mp4' | relative_url }}"
   autoplay  
   muted  
   loop  
@@ -99,7 +99,20 @@ for n in 0, 1, 2, …:
   >
 </video>
 
-  - [【Julia逆写像描画js】]({{ '/myPj/inverse/' | relative_url }})  
+- [【2DJulia逆写像描画js】]({{ '/myPj/inverse/' | relative_url }})  
+
+<video 
+  src="{{ '/assets/movie/3dJulia.mp4' | relative_url }}"
+  autoplay  
+  muted  
+  loop  
+  playsinline  
+  width="640"
+  controls
+  >
+</video>
+
+- [【3DJulia逆写像描画js】]({{ '/myPj/inverse/threeJuliaInverseAnimate.html' | relative_url }})  
 
 ---
 
