--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -101,6 +101,10 @@ for n in 0, 1, 2, …:
 
 - [【2DJulia逆写像描画js】]({{ '/myPj/inverse/' | relative_url }})  
 
+---
+
+ドリフトは時間、発散と収束の境界、、、と思い、3Dで表現してみた。が、思ったほどでも。。。
+
 <video 
   src="{{ '/assets/movie/3dJulia.mp4' | relative_url }}"
   autoplay  
