本記事の内容

--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -16,7 +16,8 @@ tags:
 ## 本記事の内容
 
 - ジュリア集合が☯️マークに見えた。
-- 「分けて分け合う」のたとえに使いたい。
+  - 「分けて分け合う」のたとえに使いたい。
+- 理解のためにJavaScriptで動かして考えた
 
 ---
 
@@ -103,7 +104,8 @@ for n in 0, 1, 2, …:
 
 ---
 
-ドリフトは時間、発散と収束の境界、、、と思い、3Dで表現してみた。が、思ったほどでも。。。
+なんとなく、ドリフトは時間、発散と収束の境界、、、と思い、3Dで表現してみた。  
+が、思ったほどでも。。。
 
 <video 
   src="{{ '/assets/movie/3dJulia.mp4' | relative_url }}"
