--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -104,8 +104,8 @@ for n in 0, 1, 2, …:
 
 ---
 
-なんとなく、ドリフトは時間、発散と収束の境界、、、と思い、3Dで表現してみた。  
-が、思ったほどでも。。。
+なんとなく、ドリフトは時間、発散と収束の境界、、、と思い、3Dで表現してみたくなったのでやってみた。  
+が、思ったほどでも。。。  
 
 <video 
   src="{{ '/assets/movie/3dJulia.mp4' | relative_url }}"
@@ -118,7 +118,22 @@ for n in 0, 1, 2, …:
   >
 </video>
 
-- [【3DJulia逆写像描画js】]({{ '/myPj/julia-set/d3-julia.html' | relative_url }})  
+#### iframe
+
+- 動かし方 
+  - Runで開始します
+  - マウスでドラッグするとカメラが回転します
+  - うまく動かないときはこちら
+    - [【3DJulia逆写像描画js】]({{ '/myPj/julia-set/d3-julia.html' | relative_url }})  
+
+<iframe
+  src="https://uminomae.github.io/pjdhiro/myPj/julia-set/d3-julia.html"
+  width="500"
+  height="700"
+  style="border: none;"
+  allowfullscreen
+  loading="lazy"
+></iframe>
 
 ---
 
