--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -87,7 +87,7 @@ for n in 0, 1, 2, …:
 
 発散の判定には、ノルム（長さの絶対値）だけあれば良くて、でも、計算には角度（回転方向）が必要で、なので円として扱えてしまう。なので、描画平面と発散判定を同じ平面でできてしまう逆写像の理解に苦しんだ。
 
-理解が曖昧なので、JavaScriptで、円周からJulia集合への逆写像を動かしてみた
+理解が曖昧なので、JavaScriptで円周からJulia集合への逆写像を動かしてみた。
 
 <video 
   src="{{ '/assets/movie/2D-Julia-set.mp4' | relative_url }}"
@@ -100,11 +100,22 @@ for n in 0, 1, 2, …:
   >
 </video>
 
-- [【2DJulia逆写像描画js】]({{ '/myPj/julia-set/d2-julia.html' | relative_url }})  
+<iframe
+  src="https://uminomae.github.io/pjdhiro/myPj/julia-set/d2-julia.html"
+  width="500"
+  height="700"
+  style="border: none;"
+  allowfullscreen
+  loading="lazy"
+></iframe>
+
+- 描画ページ
+  - [【2DJulia逆写像描画js】]({{ '/myPj/julia-set/d2-julia.html' | relative_url }})  
 
 ---
 
-なんとなく、ドリフトは時間、発散と収束の境界、、、と思い、3Dで表現してみたくなったのでやってみた。  
+2Dで見てたら、なんとなく、ドリフトは時間、発散と収束の境界、、、と思った。
+なので、3Dでもやってみた。  
 が、思ったほどでも。。。  
 
 <video 
@@ -123,7 +134,7 @@ for n in 0, 1, 2, …:
 - 動かし方 
   - Runで開始します
   - マウスでドラッグするとカメラが回転します
-  - うまく動かないときはこちら
+  - うまく動かないとき or ウインドウサイズで動かしたい時はこちら
     - [【3DJulia逆写像描画js】]({{ '/myPj/julia-set/d3-julia.html' | relative_url }})  
 
 <iframe
