--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -100,8 +100,13 @@ for n in 0, 1, 2, …:
   >
 </video>
 
+#### 2Dの逆写像script
+
+- うまく動かないとき or ウインドウサイズで動かしたい時はこちら
+  - [【2DJulia逆写像描画js】]({{ '/myPj/julia-set/d2-julia.html' | relative_url }})  
+
 <iframe
-  src="https://uminomae.github.io/pjdhiro/myPj/julia-set/d2-julia.html"
+  src="{{ '/myPj/julia-set/d2-julia.html' | relative_url }}"
   width="500"
   height="700"
   style="border: none;"
@@ -109,8 +114,6 @@ for n in 0, 1, 2, …:
   loading="lazy"
 ></iframe>
 
-- 描画ページ
-  - [【2DJulia逆写像描画js】]({{ '/myPj/julia-set/d2-julia.html' | relative_url }})  
 
 ---
 
@@ -129,7 +132,7 @@ for n in 0, 1, 2, …:
   >
 </video>
 
-#### iframe
+#### 3Dの逆写像script
 
 - 動かし方 
   - Runで開始します
@@ -138,7 +141,7 @@ for n in 0, 1, 2, …:
     - [【3DJulia逆写像描画js】]({{ '/myPj/julia-set/d3-julia.html' | relative_url }})  
 
 <iframe
-  src="https://uminomae.github.io/pjdhiro/myPj/julia-set/d3-julia.html"
+  src="{{ '/myPj/julia-set/d3-julia.html' | relative_url }}"
   width="500"
   height="700"
   style="border: none;"
