--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -13,6 +13,12 @@ tags:
   - 分けて分け合う
 ---
 
+```
+いつもの世界を タテ ヨコ ナナメにのぞいてみてごらん 希望 探すなら
+```
+初めて娘にプレゼントしたDVDの歌詞。
+日々、6才の子供に説明できているだろうか？  
+
 ## 本記事の内容
 
 - ジュリア集合が☯️マークに見えた。
