blog:四元数動画埋め込み

--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -152,7 +152,7 @@ for n in 0, 1, 2, …:
   height="700"
   style="border: none;"
   allowfullscreen
-  loading="lazy"
+  loading="lazy"w
 ></iframe>
 
 ---
@@ -181,3 +181,6 @@ for n in 0, 1, 2, …:
 
 - 3D:Julia Sets of the Mandelbulb (8k)
 <iframe width="1117" height="628" src="https://www.youtube.com/embed/cy1hu08VsNA?mute=1" title="Julia Sets of the Mandelbulb (8k)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+- 
+<iframe width="973" height="547" src="https://www.youtube.com/embed/94NmanMgR9k?t=1480" title="4次元の数 ｢四元数｣の見た目" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
