--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -152,7 +152,20 @@ for n in 0, 1, 2, …:
   height="700"
   style="border: none;"
   allowfullscreen
-  loading="lazy"w
+  loading="lazy"
+></iframe>
+
+3Dで表現できるなら四次元回転のステレオ投影の方が☯️陰陽マークが表現できそうな気がしたのでやってみた。
+
+#### 四次元回転
+
+<iframe
+  src="{{ '/myPj/qt-st-visual/' | relative_url }}"
+  width="500"
+  height="700"
+  style="border: none;"
+  allowfullscreen
+  loading="lazy"
 ></iframe>
 
 ---
