--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -113,7 +113,7 @@ for n in 0, 1, 2, …:
 
 <iframe
   src="{{ '/myPj/julia-set/d2-julia.html' | relative_url }}"
-  width="500"
+  width="400"
   height="700"
   style="border: none;"
   allowfullscreen
@@ -148,20 +148,21 @@ for n in 0, 1, 2, …:
 
 <iframe
   src="{{ '/myPj/julia-set/d3-julia.html' | relative_url }}"
-  width="500"
+  width="400"
   height="700"
   style="border: none;"
   allowfullscreen
   loading="lazy"
 ></iframe>
 
-3Dで表現できるなら四次元回転のステレオ投影の方が☯️陰陽マークが表現できそうな気がしたのでやってみた。
 
-#### 四次元回転
+#### 四元数のステレオ投影
+
+四元数のステレオ投影なら☯️陰陽マークに似てることを伝えられそう、、、な気がしたのでやってみた。
 
 <iframe
   src="{{ '/myPj/qt-st-visual/' | relative_url }}"
-  width="500"
+  width="400"
   height="700"
   style="border: none;"
   allowfullscreen
@@ -170,7 +171,7 @@ for n in 0, 1, 2, …:
 
 ---
 
-### 漸化式：パイと粉砂糖の比喩
+### ジュリア集合：パイと粉砂糖の比喩
 
 円をパイにたとえると、  
 パイの上に粉砂糖をばらまき、回転（＝二乗）と傾き（＝平行移動）を繰り返す。
