--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -95,6 +95,10 @@ for n in 0, 1, 2, …:
 
 理解が曖昧なので、JavaScriptで円周からJulia集合への逆写像を動かしてみた。
 
+### 2Dの逆写像App
+
+#### Movie  
+
 <video 
   src="{{ '/assets/movie/2D-Julia-set.mp4' | relative_url }}"
   autoplay  
@@ -106,7 +110,7 @@ for n in 0, 1, 2, …:
   >
 </video>
 
-#### 2Dの逆写像script
+#### App
 
 - うまく動かないとき or ウインドウサイズで動かしたい時はこちら
   - [【2DJulia逆写像描画js】]({{ '/myPj/julia-set/d2-julia.html' | relative_url }})  
@@ -120,12 +124,15 @@ for n in 0, 1, 2, …:
   loading="lazy"
 ></iframe>
 
-
 ---
+
+### 3Dの逆写像App
 
 2Dで見てたら、なんとなく、ドリフトは時間、発散と収束の境界、、、と思った。
 なので、3Dでもやってみた。  
 が、思ったほどでも。。。  
+
+#### Movie
 
 <video 
   src="{{ '/assets/movie/3dJulia.mp4' | relative_url }}"
@@ -138,7 +145,7 @@ for n in 0, 1, 2, …:
   >
 </video>
 
-#### 3Dの逆写像script
+#### App
 
 - 動かし方 
   - Runで開始します
@@ -155,10 +162,26 @@ for n in 0, 1, 2, …:
   loading="lazy"
 ></iframe>
 
+---
 
-#### 四元数のステレオ投影
+### 四元数のステレオ投影App
 
 四元数のステレオ投影なら☯️陰陽マークに似てることを伝えられそう、、、な気がしたのでやってみた。
+
+#### Movie
+
+<video 
+  src="{{ '/assets/movie/qt-st.mov' | relative_url }}"
+  autoplay  
+  muted  
+  loop  
+  playsinline  
+  width="375"
+  controls
+  >
+</video>
+
+#### App
 
 <iframe
   src="{{ '/myPj/qt-st-visual/' | relative_url }}"
