--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -13,11 +13,31 @@ tags:
   - 分けて分け合う
 ---
 
+<video 
+  src="{{ '/assets/movie/place2.mp4' | relative_url }}"
+  autoplay  
+  muted  
+  loop  
+  playsinline  
+  controls
+  style="max-width:100%; height:auto; display:block;"
+  >
+</video>
+
+---
+
 ```
 いつもの世界を タテ ヨコ ナナメにのぞいてみてごらん 希望 探すなら
 ```
 初めて娘にプレゼントしたDVDの歌詞。
 日々、6才の子供に説明できているだろうか？  
+
+<img
+  src="{{ '/assets/images/humor/yinyang/tateYokoNaname.png' | relative_url }}" 
+  alt=""
+  style="
+    max-width:100%; height:auto; display:block;　
+  ">
 
 ## 本記事の内容
 
@@ -50,14 +70,14 @@ tags:
 - ↓の映像はジュリア集合にあった点が、発散せずに「円の中に収まっている」様子の"逆再生"。
   - 動画の最後の複雑な模様は、そのまま100回くらい繰り返した場合。
 
-<video 
+<video
   src="{{ '/assets/movie/julia.mp4' | relative_url }}"
   autoplay  
   muted  
   loop  
   playsinline  
-  width="640"
   controls
+  style="max-width:100%; height:auto; display:block;"
   >
 </video>
 
@@ -105,8 +125,8 @@ for n in 0, 1, 2, …:
   muted  
   loop  
   playsinline  
-  width="640"
   controls
+  style="max-width:100%; height:auto; display:block;"
   >
 </video>
 
@@ -140,8 +160,8 @@ for n in 0, 1, 2, …:
   muted  
   loop  
   playsinline  
-  width="640"
   controls
+  style="max-width:100%; height:auto; display:block;"
   >
 </video>
 
