--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -43,7 +43,9 @@ tags:
 
 - ジュリア集合が☯️マークに見えた。
   - 「分けて分け合う」のたとえに使いたい。
-- 理解のためにJavaScriptで動かして考えた
+- 理解のためにJavaScriptで動かして考えた。
+  - 四元数のステレオ投影で表現してみた。
+    - vanilla + threejs
 
 ---
 
@@ -203,6 +205,11 @@ for n in 0, 1, 2, …:
 
 #### App
 
+- 全画面用：[【四元数ステレオ投影ビジュアライザ】]({{ '/myPj/qt-st-visual/' | relative_url }})  
+  - 動かし方 
+    - マウスでドラッグするとカメラが回転します。  
+    - 画面右上の「設定」ボタンで動きを確認しながら調整ができます。
+ 
 <iframe
   src="{{ '/myPj/qt-st-visual/' | relative_url }}"
   width="375"
