--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -132,20 +132,6 @@ for n in 0, 1, 2, …:
   >
 </video>
 
-#### App
-
-- うまく動かないとき or ウインドウサイズで動かしたい時はこちら
-  - [【2DJulia逆写像描画js】]({{ '/myPj/julia-set/d2-julia.html' | relative_url }})  
-
-<iframe
-  src="{{ '/myPj/julia-set/d2-julia.html' | relative_url }}"
-  width="375"
-  height="600"
-  style="border: none;"
-  allowfullscreen
-  loading="lazy"
-></iframe>
-
 ---
 
 ### 3Dの逆写像App
@@ -172,6 +158,7 @@ for n in 0, 1, 2, …:
 - 動かし方 
   - Runで開始します
   - マウスでドラッグするとカメラが回転します
+  - 2D viewボタンで真上からの視点になります
   - うまく動かないとき or ウインドウサイズで動かしたい時はこちら
     - [【3DJulia逆写像描画js】]({{ '/myPj/julia-set/d3-julia.html' | relative_url }})  
 
