--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -43,9 +43,9 @@ tags:
 
 - ジュリア集合が☯️マークに見えた。
   - 「分けて分け合う」のたとえに使いたい。
-- 理解のためにJavaScriptで動かして考えた。
-  - 四元数のステレオ投影で表現してみた。
-    - vanilla + threejs
+- 理解のために逆写像をJavaScriptで動かしてみた。
+- 四元数のステレオ投影もやってみた。
+  - Vanilla JS + threejs
 
 ---
 
@@ -165,43 +165,12 @@ for n in 0, 1, 2, …:
 <iframe
   src="{{ '/myPj/julia-set/d3-julia.html' | relative_url }}"
   width="375"
-  height="625"
-  style="border: none;"
-  allowfullscreen
-  loading="lazy"
-></iframe>
-
----
-
-### 四元数のステレオ投影App
-
-四元数のステレオ投影なら☯️陰陽マークに似てることを伝えられそう、、、な気がしたのでやってみた。
-
-#### Movie
-
-<video 
-  src="{{ '/assets/movie/qt-st.mov' | relative_url }}"
-  autoplay  
-  muted  
-  loop  
-  playsinline  
-  width="180"
-  controls
-  >
-</video>
-
-#### App
-
-- 全画面用：[【四元数ステレオ投影ビジュアライザ】]({{ '/myPj/qt-st-visual/' | relative_url }})  
-  - 動かし方 
-    - マウスでドラッグするとカメラが回転します。  
-    - 画面右上の「設定」ボタンで動きを確認しながら調整ができます。
- 
-<iframe
-  src="{{ '/myPj/qt-st-visual/' | relative_url }}"
-  width="375"
-  height="600"
-  style="border: none;"
+  height="500"
+  style="
+    border: none;
+    max-width:85%; 
+    display:block;
+  "
   allowfullscreen
   loading="lazy"
 ></iframe>
@@ -222,6 +191,46 @@ for n in 0, 1, 2, …:
 
 どの粒が最後まで残るかを見て、残った粒のもとあった場所が 充填Julia 集合に対応。
 つまり、パイに残った粉砂糖は、ジュリア集合の位置にあった。
+
+### 四元数のステレオ投影App
+
+四元数のステレオ投影なら☯️陰陽マークに似てることを伝えられそう、、、な気がしたのでやってみた。
+
+<!-- #### Movie -->
+
+<!-- <video 
+  src="{{ '/assets/movie/qt-st.mov' | relative_url }}"
+  autoplay  
+  muted  
+  loop  
+  playsinline  
+  width="180"
+  controls
+  >
+</video> -->
+
+<!-- #### App -->
+
+- 全画面用：[【四元数ステレオ投影ビジュアライザ】]({{ '/myPj/qt-st-visual/' | relative_url }})  
+  - 動かし方 
+    - マウスでドラッグするとカメラが回転します。  
+    - 画面右上の「設定」ボタンで動きを確認しながら調整ができます。
+ 
+<iframe
+  src="{{ '/myPj/qt-st-visual/' | relative_url }}"
+  width="375"
+  height="500"
+  style="
+    border: none;
+    max-width:85%; 
+    display:block;
+  "
+  allowfullscreen
+  loading="lazy"
+></iframe>
+
+---
+
 
 ### 関連
 
