--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -192,6 +192,10 @@ for n in 0, 1, 2, …:
 どの粒が最後まで残るかを見て、残った粒のもとあった場所が 充填Julia 集合に対応。
 つまり、パイに残った粉砂糖は、ジュリア集合の位置にあった。
 
+<a href="https://chatgpt.com/share/684e3a5b-4cb0-800b-89e2-d9ccd54b9ddb" target="_blank" rel="noopener noreferrer">
+  ChatGPT シェアリンク：「この比喩を解説して」
+</a>
+
 ### 四元数のステレオ投影App
 
 四元数のステレオ投影なら☯️陰陽マークに似てることを伝えられそう、、、な気がしたのでやってみた。
