--- a/_posts/2025/2025-05/2025-05-27-link.md
+++ b/_posts/2025/2025-05/2025-05-27-link.md
@@ -12,6 +12,8 @@ tags:
 
 ### 物理・数学
 
+- 720度回転
+  - [参考:【Spinors - YouTube】](https://www.youtube.com/watch?v=S0vn6vDeYSI)
 - 量子
   - [参考:【陰陽マーク？　「量子もつれ」をリアルタイムに可視化することに成功　国際チームが23年に発表：ちょっと昔のInnovative Tech - ITmedia NEWS】](https://www.itmedia.co.jp/news/articles/2409/09/news051.html)
   - [参考:【史上初の映像化に成功！常軌を逸した物質「時間結晶」とは何か（宇宙ヤバイchキャベチ） - エキスパート - Yahoo!ニュース】](https://news.yahoo.co.jp/expert/articles/95d38ed70ad97b9a74a05873633ef24363e047df)
@@ -31,3 +33,6 @@ tags:
 - インフレ時の債券の動き
   - [参考:【分散効果が消滅した時の世界】](https://www.alliancebernstein.co.jp/knowledge/13206.html)
 
+### マーケティング
+
+- [参考:【量子焼きなまし法 - Wikipedia】](https://ja.wikipedia.org/wiki/%E9%87%8F%E5%AD%90%E7%84%BC%E3%81%8D%E3%81%AA%E3%81%BE%E3%81%97%E6%B3%95)
