--- a/_posts/2025/2025-05/2025-05-31-julia.md
+++ b/_posts/2025/2025-05/2025-05-31-julia.md
@@ -11,6 +11,9 @@ tags:
   - フラクタル
   - 時代
   - 分けて分け合う
+header:
+  teaser: "/assets/movie/2D-Julia-set.mp4"   
+excerpt: "最近、時代のエネルギーを「粒がリズミカルに重なり合い、統合する」ようなイメージで思考していた。"  
 ---
 
 <video 
