--- a/_posts/2025/2025-05/2025-05-27-link.md
+++ b/_posts/2025/2025-05/2025-05-27-link.md
@@ -6,7 +6,13 @@ categories:
   - Log
 tags:
   - 量子もつれ
+header:
+  teaser: "/assets/images/favicon/android-chrome-192x192.png"   
+excerpt: ""  
 ---
+
+
+<!-- more -->
 
 ## 役に立ったLink
 
