--- a/_posts/2025/2025-05/2025-05-27-link.md
+++ b/_posts/2025/2025-05/2025-05-27-link.md
@@ -28,6 +28,7 @@ excerpt: ""
   - マンデルブロ集合の先端のズーム
     - [参考:【The Hardest Trip - Mandelbrot Fractal Zoom - YouTube】](https://www.youtube.com/watch?v=LhOSM6uCWxk)
   - [参考:【How to Fold a Julia Fractal — Acko.net】](https://acko.net/blog/how-to-fold-a-julia-fractal/)
+  - [参考:【複素数を色々な方法で可視化 | 鑑賞して楽しむ虚数の幻想世界 | VISUALIUM - YouTube】](https://www.youtube.com/watch?v=xl3DViAbzvA)
 
 ### 政治・マクロ経済
 
