--- a/_posts/2026/2026-1/2026-01-28-biDriven.md
+++ b/_posts/2026/2026-1/2026-01-28-biDriven.md
@@ -1,6 +1,6 @@
 ---
 permalink: /20260187bi-driven/
-title: "美駆動思考支援：OpenAI Prismを使用してみた。"
+title: "美駆動思考支援：OpenAI Prismを使用してみたs"
 date: 2026-01-28T14:30:31+09:00
 categories:
   - AI
@@ -65,7 +65,7 @@ BionやMeltzerといった臨床心理学の道具を使い、物語の中で「
 - 論拠を探すのに時間がかかります（5〜10分程度かかるようです）。
 - 日本語の論文をコンパイルする際にエラーや警告が出る箇所をあらかじめケアしています。
 
-[GPTs：短文からPrismに貼れるLaTeXを作る汎用チャットボット](https://chatgpt.com/share/6979d59a-0d68-800b-b685-8a06f8f6acb0)
+[GPTs：短文からPrismに貼れるLaTeXを作る汎用チャットボット](https://chatgpt.com/g/g-6979ca4ef8148191b29515013af5647e-duan-wen-karaprismnitie-rerulatexwozuo-rufan-yong-tiyatutohotuto)
 
 ## 参考　　
 
