--- a/_posts/2026/2026-1/2026-01-28-biDriven.md
+++ b/_posts/2026/2026-1/2026-01-28-biDriven.md
@@ -16,6 +16,7 @@ header:
 excerpt: "アニメ『チ。―地球の運動について―』の視聴を通じて得た着想を、「思考支援フレームワーク」へと落とし込むプロセスを整理したものです。"  
 ---
 
+[この投稿の解説：GPT5.2：](https://chatgpt.com/share/697ab9e7-1380-800b-a19e-bbde0f003306)
 
 [![image]({{ '/assets/images/blog/2026-1/img.jpg' | relative_url }})]({{ '/assets/images/blog/2026-1/img.jpg' | relative_url }})
 
