--- a/_posts/2026/2026-1/2026-01-28-biDriven.md
+++ b/_posts/2026/2026-1/2026-01-28-biDriven.md
@@ -12,7 +12,8 @@ tags:
   - ドナルドメルツァー
   - 美
 header:
-  teaser: "assets/images/blog/2026-1/img.jpg"   
+  og_image: https://uminomae.github.io/pjdhiro/assets/images/blog/2026-1/img.jpg
+  teaser: "https://uminomae.github.io/pjdhiro/assets/images/blog/2026-1/img.jpg"   
 excerpt: "アニメ『チ。―地球の運動について―』の視聴を通じて得た着想を、「思考支援フレームワーク」へと落とし込むプロセスを整理したものです。"  
 ---
 
