--- a/_posts/2026/2026-1/2026-01-28-biDriven.md
+++ b/_posts/2026/2026-1/2026-01-28-biDriven.md
@@ -57,13 +57,17 @@ BionやMeltzerといった臨床心理学の道具を使い、物語の中で「
 
 ## [OpenAI Prismで生成：LaTeX形式]({{ '/assets/images/blog/2026-1/main.pdf/' | relative_url }})  
 
-[![image]({{ '/assets/images/blog/2026-1/img.jpg' | relative_url }}){: .img-card .img-60 }]({{ '/assets/images/blog/2026-1/img.jpg' | relative_url }})
-
-- サンプルPDF：上記画像からGPTとの対話によってプロンプトを作成してPrismを使ってみました。論文自体の内容はざっくりと目を通しただけで未検証です。
-- 生成目的：論拠となる文献の自動収集です。論のどこに該当するのかを示すためにLaTeXで論文調の出力にしてます。
-  - あくまで「論拠がどこにかかるのか」を自動で生成するために用いてます。
-
 [![image]({{ '/assets/images/blog/2026-1/latex-bi.png' | relative_url }}){: .img-card .img-60 }]({{ '/assets/images/blog/2026-1/main.pdf' | relative_url }}) 
+
+<!-- [![image]({{ '/assets/images/blog/2026-1/img.jpg' | relative_url }}){: .img-card .img-60 }]({{ '/assets/images/blog/2026-1/img.jpg' | relative_url }}) -->
+
+- 本ページの画像を元に、GPTとの対話によってプロンプトを作成し、Prismで出力しました。  
+  - 論文自体の内容はざっくりと目を通しただけで未検証です。
+- 生成目的：
+  - 論拠となる文献の自動収集です。
+  - 論のどこに該当するのかを示すためにLaTeXで論文調の出力にしてます。
+
+
 
 [この論の高校生向けの解説：ChatGPT5.2](https://chatgpt.com/share/6979bde1-4120-800b-b9fb-e0e0682ef723)
 <!-- [美駆動思考支援 LaTeX形式]({{ '/assets/images/blog/2026-1/main.pdf/' | relative_url }})   -->
