--- a/_posts/2026/2026-1/2026-01-28-biDriven.md
+++ b/_posts/2026/2026-1/2026-01-28-biDriven.md
@@ -73,9 +73,9 @@ BionやMeltzerといった臨床心理学の道具を使い、物語の中で「
 <!-- [美駆動思考支援 LaTeX形式]({{ '/assets/images/blog/2026-1/main.pdf/' | relative_url }})   -->
 
 
-## LaTeXを出力するチャットbot
+## [LaTeXを出力するチャットbot](https://chatgpt.com/g/g-6979ca4ef8148191b29515013af5647e-duan-wen-karaprismnitie-rerulatexwozuo-rufan-yong-tiyatutohotuto)
 
-試しに、OpenAI Prismに渡すLaTeXを出力するチャットbotを作りました。
+試しに、OpenAI Prismに渡すLaTeXを出力する[チャットbotを作りました。](https://chatgpt.com/g/g-6979ca4ef8148191b29515013af5647e-duan-wen-karaprismnitie-rerulatexwozuo-rufan-yong-tiyatutohotuto)
 
 - SNS投稿を受け取って主張を検討し、論拠を探します。.tex,.bib
 - 途中状態をyamlで出力するので作業を途中停止することが可能です。
