--- a/_posts/2026/2026-1/2026-01-30-Prism.md
+++ b/_posts/2026/2026-1/2026-01-30-Prism.md
@@ -10,7 +10,7 @@ tags:
 header:
   og_image: https://uminomae.github.io/pjdhiro/assets/images/blog/2026-1/prism/ss2.png
   teaser: "https://uminomae.github.io/pjdhiro/assets/images/2026-1/prism/ss2.png"   
-excerpt: "アニメ『チ。―地球の運動について―』の視聴を通じて得た着想を、「思考支援フレームワーク」へと落とし込むプロセスを整理したものです。"  
+excerpt: "OpneAI Prismの設定方法の解説ページです。"  
 ---
 
 
