--- a/_posts/2026/2026-1/2026-01-30-Prism.md
+++ b/_posts/2026/2026-1/2026-01-30-Prism.md
@@ -10,12 +10,13 @@ tags:
 header:
   og_image: https://uminomae.github.io/pjdhiro/assets/images/blog/2026-1/prism/ss2.png
   teaser: "https://uminomae.github.io/pjdhiro/assets/images/blog/2026-1/prism/ss2.png"   
-excerpt: "OpneAI Prismの設定方法の解説ページです。"  
+excerpt: "OpneAI GPTsの設定方法の解説ページです。"  
 ---
-
 
 - ChatGPTの **GPTs（カスタムGPT）** を自作すると、「自分用の作業員」をChatGPT内に常駐させる感覚になります。  
 - 本記事では、**GPT Builder（作成画面）を使ってGPTsを作る手順**を、実例つきでまとめます。
+
+[作成例:【ChatGPT - 短文からPrismに貼れるLaTeXを作る汎用チャットボット　ja-v1】](https://chatgpt.com/g/g-6979ca4ef8148191b29515013af5647e-duan-wen-karaprismnitie-rerulatexwozuo-rufan-yong-tiyatutohotuto-ja-v1)
 
 ---
 
