bugfix link pdf

--- a/_posts/2026/2026-1/2026-01-28-biDriven.md
+++ b/_posts/2026/2026-1/2026-01-28-biDriven.md
@@ -55,7 +55,7 @@ BionやMeltzerといった臨床心理学の道具を使い、物語の中で「
 
 ---
 
-## [OpenAI Prismで生成：LaTeX形式]({{ '/assets/images/blog/2026-1/main.pdf/' | relative_url }})  
+## [OpenAI Prismで生成：LaTeX形式]({{ '/assets/images/blog/2026-1/main.pdf' | relative_url }})  
 
 [![image]({{ '/assets/images/blog/2026-1/latex-bi.png' | relative_url }}){: .img-card .img-60 }]({{ '/assets/images/blog/2026-1/main.pdf' | relative_url }}) 
 
